--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 h1 {
-    font-family: 'Roboto', cursive;
+    font-family: 'Roboto', sans-serif;
 }
+
 
 .item {
    text-align: 200px;
@@ -21,6 +22,7 @@ img {
     transition: background-size 0.3s ease;
     filter: grayscale(1);
     transition: background-size 0.3s ease; 
+    font-family: 'Liu Jian Mao Cao', cursive;
 }
 
  body {
